fix: external link icon shouldn't be vertical aligned (#699)

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -80,7 +80,6 @@ a {
   }
 
   &.external .external-icon {
-    vertical-align: bottom;
     height: 1ex;
     margin: 0 0.15em;
 
